# agent-evals

./: .env.example  .gitignore  README.md  REPORT.md  graph-viewer.html  inspect.ipynb  parquet_to_csv.py  task.md
agent/: agent_config.yaml  chat.py  decision.py  gateway.py  index-kb.sh  mcp_runner.py  memory.py  replay.py  sandbox.py  schemas.py  vector_index.py
agent/prompts/: browser.md  formatter.md
agent/tests/: test_agent_model.py
evals/: README.md  kb_retrieval.py  server.py
evals/data/: .gitkeep  sampled_conversations.csv
evals/prompts/: bias_harm.md  empathy.md  hallucination.md  jailbreak.md
evals/results/: batch_eval_20260721T145905Z.csv  batch_eval_20260721T150042Z.csv  batch_eval_20260721T150042Z_summary_recomputed.csv
evals/scripts/: README.md  plot_eval_summaries.py  run_batch_eval.py  (+2 more)
gateway/: main.py
graph-viewer/: README.md  memory_parse.py  server.py  styles.css
knowledge_bank/: 01_Diet.md  03_Wellness_Retreats.md  04_Meditation_Reflection.md  07_Natural_Organic_Eating.md
src/: README.md
src/evals/: README.md  judge.py  kb_retrieval.py  pyproject.toml  server.py
src/evals/prompts/: bias_harm.md  empathy.md  hallucination.md  jailbreak.md
src/evals/results/: batch_eval_20260721T143624Z.csv  batch_eval_20260721T143624Z_summary_recomputed.csv  batch_eval_20260721T145905Z_summary_recomputed.csv  batch_eval_20260721T150042Z.csv
src/evals/scripts/: README.md  run_batch_eval.py  sample_conversations.py
src/evals/static/: app.js  index.html  styles.css
src/evals/tests/: conftest.py  test_judge.py  test_kb_retrieval.py
(+43 files in other folders)
